Fix title display

--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -123,12 +123,12 @@
                                         {% elseif id == 'single' %}
                                             label="{{ 'Besondere Errungenschaften'|trans({},'game') }}"
                                         {% else %}
-                                            label="{{ list[0].prototype.associatedPicto.label|trans({}, 'game') }}"
+                                            label="{{ list[0].prototype.associatedPicto.label|trans({}, 'game')|raw }}"
                                         {% endif %}
                                 >
                                     {% for award in list %}
                                         {% if award.prototype is not null and award.prototype.title is not null %}
-                                            <option {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileTitle')) and app.user.activeTitle != award %}disabled{% endif %} {% if app.user.activeTitle == award %}selected{% endif %} value="{{ award.id }}">{{ award.prototype.title|trans({},'game') }}</option>
+                                            <option {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileTitle')) and app.user.activeTitle != award %}disabled{% endif %} {% if app.user.activeTitle == award %}selected{% endif %} value="{{ award.id }}">{{ award.prototype.title|trans({},'game')|raw }}</option>
                                         {% endif %}
                                     {% endfor %}
                                 </optgroup>
