--- a/templates/ajax/game/map.html.twig
+++ b/templates/ajax/game/map.html.twig
@@ -204,40 +204,40 @@
                         {% if zone.x < map.map_x1 %}<div class="scout-sense scout-sense-east">
                             {% set sense = map.zones[zone.x+1][zone.y].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 14 39" xmlns="http://www.w3.org/2000/svg">
-                                <text x="7" y="24.5" text-anchor="middle" style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="8" y="22.5" text-anchor="middle" style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.x > map.map_x0 %}<div class="scout-sense scout-sense-west">
                             {% set sense = map.zones[zone.x-1][zone.y].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 14 39" xmlns="http://www.w3.org/2000/svg">
-                                <text x="7" y="24.5" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="8" y="22.5" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.y > map.map_y0 %}<div class="scout-sense scout-sense-south">
                             {% set sense = map.zones[zone.x][zone.y-1].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 39 14" xmlns="http://www.w3.org/2000/svg">
-                                <text x="19.5" y="12" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
                             </svg>
                             </div>{% endif %}
                         {% if zone.y < map.map_y1 %}<div class="scout-sense scout-sense-north">
                             {% set sense = map.zones[zone.x][zone.y+1].getPersonalScoutEstimation(citizen) %}
                             <svg viewBox="0 0 39 14" xmlns="http://www.w3.org/2000/svg">
-                                <text x="19.5" y="12" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
+                                <text x="19.5" y="9" text-anchor="middle"  style="font: 12px 'visitor2', sans-serif; fill: #a0be40;">{{ sense }}</text>
                             </svg>
                             </div>{% endif %}
                     {% endif %}
                     {% if scavenger_sense %}
                         {% if zone.x < map.map_x1 and (zone.x != -1 or zone.y != 0) and map.zones[zone.x+1][zone.y].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') %}
-                            <div class="scavenger-sense scavenger-sense-east scavenger-sense-{% if map.zones[zone.x+1][zone.y].digs > 0 or (map.zones[zone.x+1][zone.y].prototype and map.zones[zone.x+1][zone.y].ruinDigs > 0) %}1{% else %}0{% endif %}"></div>
+                            <div class="scavenger-sense scavenger-sense-east scavenger-sense-{% if map.zones[zone.x+1][zone.y].digs > 0 or (map.zones[zone.x+1][zone.y].prototype and map.zones[zone.x+1][zone.y].ruinDigs > 0) %}1{% else %}0{% endif %}"><div class="img"></div></div>
                         {% endif %}
                         {% if zone.x > map.map_x0 and (zone.x != 1 or zone.y != 0) and map.zones[zone.x-1][zone.y].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') %}
-                            <div class="scavenger-sense scavenger-sense-west scavenger-sense-{% if map.zones[zone.x-1][zone.y].digs > 0 or (map.zones[zone.x-1][zone.y].prototype and map.zones[zone.x-1][zone.y].ruinDigs > 0) %}1{% else %}0{% endif %}"></div>
+                            <div class="scavenger-sense scavenger-sense-west scavenger-sense-{% if map.zones[zone.x-1][zone.y].digs > 0 or (map.zones[zone.x-1][zone.y].prototype and map.zones[zone.x-1][zone.y].ruinDigs > 0) %}1{% else %}0{% endif %}"><div class="img"></div></div>
                         {% endif %}
                         {% if zone.y > map.map_y0 and (zone.x != 0 or zone.y != 1) and map.zones[zone.x][zone.y-1].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') %}
-                            <div class="scavenger-sense scavenger-sense-south scavenger-sense-{% if map.zones[zone.x][zone.y-1].digs > 0 or (map.zones[zone.x][zone.y-1].prototype and map.zones[zone.x][zone.y-1].ruinDigs > 0) %}1{% else %}0{% endif %}"></div>
+                            <div class="scavenger-sense scavenger-sense-south scavenger-sense-{% if map.zones[zone.x][zone.y-1].digs > 0 or (map.zones[zone.x][zone.y-1].prototype and map.zones[zone.x][zone.y-1].ruinDigs > 0) %}1{% else %}0{% endif %}"><div class="img"></div></div>
                         {% endif %}
                         {% if zone.y < map.map_y1 and (zone.x != 0 or zone.y != -1) and map.zones[zone.x][zone.y+1].discoveryStatus > constant('App\\Entity\\Zone::DiscoveryStateNone') %}
-                            <div class="scavenger-sense scavenger-sense-north scavenger-sense-{% if map.zones[zone.x][zone.y+1].digs > 0 or (map.zones[zone.x][zone.y+1].prototype and map.zones[zone.x][zone.y+1].ruinDigs > 0) %}1{% else %}0{% endif %}"></div>
+                            <div class="scavenger-sense scavenger-sense-north scavenger-sense-{% if map.zones[zone.x][zone.y+1].digs > 0 or (map.zones[zone.x][zone.y+1].prototype and map.zones[zone.x][zone.y+1].ruinDigs > 0) %}1{% else %}0{% endif %}"><div class="img"></div></div>
                         {% endif %}
                     {% endif %}
                 {% endif %}
