--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -783,7 +783,7 @@ ul.actions, ul.special_actions, ul.heroic_actions {
       }
     }
     &>div.targets {
-      position: absolute; display: none; left: 0; right: 0; top: 100%; z-index: 1500; background: #3b3249;
+      position: absolute; display: none; left:100%; right: -100%; top: 0%; z-index: 1500; background: #3b3249;
       color: #f0d79e; border: 1px solid #afacc1; outline: 2px solid black;
       margin: 0; padding: 5px;
       span.highlight { padding-left: 3px; padding-right: 3px; white-space: nowrap; background-color: rgba(255,255,255,0.2);
