--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -108,14 +108,18 @@
       flex-basis: 100%;
     }
   }
+  ul.actions>li, ul.special_actions>li, ul.heroic_actions>li {
+    &>div.targets { left: 0; right: 0; top: 100%; }
+  }
 }
 @media (max-width: (@screen-small-threshold - 1)) {
   .hide-@{screen-small} {display: none !important;};
   #notifications { width: 100%; left: 0; margin-left: 0; }
   button, .button { padding-top: 16px; padding-bottom: 16px; margin-top: 8px; margin-bottom: 8px; }
-  ul.actions>li {
+  ul.actions>li, ul.special_actions>li, ul.heroic_actions>li {
     padding-top: 16px; padding-bottom: 16px; &>img:first-child { top: 19px; }
     &>div.targets {
+      left: 0; right: 0; top: 100%;
       &>ul>li { padding: 16px; }
       & *[x-close-for] { display: inline-block; padding: 16px; }
     }
