--- a/templates/ajax/soul/pictos.html.twig
+++ b/templates/ajax/soul/pictos.html.twig
@@ -24,15 +24,34 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="padded cell rw-6 rw-sm-12 center">
+            <div class="row-flex bottom hide-mobile" style="position: relative">
+                <div class="padded cell rw-4 rw-sm-12 center">
                     <h5>{{ 'Auf MyHordes erworbene Auszeichnungen'|trans({},'soul') }}</h5>
+                </div>
+
+                <div class="padded cell rw-4 rw-sm-12 center">
+                    <h5>{{ 'Importierte Auszeichnungen'|trans({},'soul') }}</h5>
+                </div>
+
+                <div class="padded cell rw-4 rw-sm-12 center">
+                    <h5>{{ 'Alte Auszeichnungen'|trans({},'soul') }}</h5>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="padded cell rw-4 rw-sm-12 center">
+                    <h5 class="hide-desktop">{{ 'Auf MyHordes erworbene Auszeichnungen'|trans({},'soul') }}</h5>
                     {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos_mh, points: points_mh, user: user, plain: true} %}
                 </div>
 
-                <div class="padded cell rw-6 rw-sm-12 center">
-                    <h5>{{ 'Importierte Auszeichnungen'|trans({},'soul') }}</h5>
+                <div class="padded cell rw-4 rw-sm-12 center">
+                    <h5 class="hide-desktop">{{ 'Importierte Auszeichnungen'|trans({},'soul') }}</h5>
                     {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos_import, points: points_import, user: user, plain: true} %}
+                </div>
+
+                <div class="padded cell rw-4 rw-sm-12 center">
+                    <h5 class="hide-desktop">{{ 'Alte Auszeichnungen'|trans({},'soul') }}</h5>
+                    {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos_old, points: points_old, user: user, plain: true} %}
                 </div>
             </div>
 
