--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -189,7 +189,7 @@
                     {% if owner.lastActionTimestamp == 0 %}
                         <li>{{'Dieser Bürger wurde noch nie gesehen...'|trans({ref: owner}, 'game')|raw}}</li>
                     {% else %}
-                        <li>{{'Der Bürger wurde zuletzt {time} gesehen.'|trans({ref: owner, '{time}': lastActionText}, 'game')|raw}}</li>
+                        <li>{{'Der Bürger wurde zuletzt {time} gesehen.'|trans({ref: owner, '{time}': '<strong>' ~ lastActionText ~ '</strong>'}, 'game')|raw}}</li>
                     {% endif %}
                     {% if owner.specificActionCounterValue(constant('App\\Entity\\ActionCounter::ActionTypeWell')) > 0 %}<li>{{"Dieser Bürger hat {ration} Wasserration(en) aus dem Brunnen genommen."|trans({ref: owner, 'ration': owner.specificActionCounterValue(constant('App\\Entity\\ActionCounter::ActionTypeWell'))}, 'game')|raw}}</li>{% endif %}
                     {% if is_outside_unprotected %}<li>{{'Dieser Bürger ist nicht in der Stadt sei und hat <strong>sein Haus nicht gegen Einbrecher geschützt</strong>...'|trans({ref: owner}, 'game')|raw}}</li>{% endif %}
