--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -48,13 +48,13 @@
         <ul class="actions">
             {% if (item_action_list is defined) %}
                 {% for entry in item_action_list %}
-                    <li class="action" {% if entry.crossed %}disabled{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
+                    <li class="action {% if entry.broken is defined and entry.broken %}broken-item{% endif %}" {% if entry.crossed %}disabled{% elseif entry.broken is defined and entry.broken %}{% elseif entry.targets is null %}x-action-id="{{ entry.id }}" {% if entry.action.confirm %}x-action-confirm="1"{% endif %} x-provoking-id="{{ entry.item.id }}"{% else %}x-target-definition="{{ entry.id }}--{{ entry.item.id }}"{% endif %}>
                         <img src="{{ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif') }}" alt="{{ entry.item.prototype.label|trans({},'items') }}">
                         {% if scout and entry.action.keepsCover %}
                             <img class="float-right" src="{{ asset('build/images/icons/small_stealthy.gif') }}" alt="">
                         {% endif %}
                         <span>{{ '{action}: {item}'|trans({'{action}': entry.action.label|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
-                        {% if entry.targets is not null and not entry.crossed %}
+                        {% if entry.targets is not null and not entry.crossed and not ( entry.broken is defined and entry.broken ) %}
                             {% if entry.target_mode in [2,3,4,5] %}
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% elseif entry.target_mode == 6 %}
@@ -64,8 +64,10 @@
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% endif %}
                         {% endif %}
-                        {% if entry.message is defined and entry.message is not null %}
+                        {% if entry.message is defined and entry.message is not null and not (entry.broken is defined and entry.broken) %}
                             <div class="tooltip normal">{{ entry.message|raw }}</div>
+                        {% elseif entry.broken is defined and entry.broken %}
+                            <div class="tooltip normal">{{ 'Dieser Gegenstand ist <strong class="red">kaputt</strong>. Du kannst ihn zur Zeit nicht gebrauchen. Vielleicht findest du in der Stadt eine gütige Seele, der ihn reparieren kann?'|trans({},'items')|raw }}</div>
                         {% elseif not entry.crossed %}
                             {% embed "ajax/game/item_tooltip.html.twig" with {"item": entry.item} %}{% endembed %}
                         {% endif %}
